# actix-jwt-with-refresh-token-template

./: .local.env  Cargo.toml  LICENSE  README.md  User template.postman_collection.json  docker-compose.yml
migrations/: 20231011201811_add_user.up.sql
src/: config.rs  errors.rs  jwt_auth_middleware.rs  main.rs  token.rs
src/db/: mod.rs
src/jobs/: email.rs  mod.rs  persistent_jobs.rs
src/repository/: mod.rs  models.rs  users.rs
src/routes/: mod.rs
src/routes/authentication/: models.rs  routes.rs
templates/: reset_password.hbs
templates/layouts/: base.hbs
