[package]
name = "user-template-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4"
anyhow = "1"
apalis = { version = "0.4", features = ["redis"] }
argon2 = "0.5.0"
base64 = "0.21.0"
chrono = { version = "0.4.23", features = ["serde"] }
derive_more = "0.99.11"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.26"
handlebars = "4.3.7"
jsonwebtoken = "8.2.0"
lettre = { version = "0.10.4", features = ["tokio1", "tokio1-native-tls"] }
log = "0.4.20"
rand = "0.8.5"
redis = { version = "0.22.3", features = ["tokio-comp"] }
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"]}
tokio = { version = "1.26.0", features = ["full"] }
tokio-util = "0.7.4"
uuid = { version = "1.4.1", features = ["serde", "v4", "fast-rng", "macro-diagnostics"] }

